--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
+    "firebase": "^10.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
