working on route to upload, routes organized to route folder in server

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,8 @@
 REACT_APP_DOMAIN=http://localhost:3001
+
+REACT_APP_FB_API=AIzaSyBb3W4_iBIwaEsosjqcg0v-l9FFJ4BCY90
+REACT_APP_FB_AUTH=sihportfolioart.firebaseapp.com
+REACT_APP_FB_PROJECT=sihportfolioart
+REACT_APP_FB_STORAGE=sihportfolioart.appspot.com
+REACT_APP_FB_ID=2733186147
+REACT_APP_FB_MESSAGE_ID=1:2733186147:web:7ab3df256211aab5d1ec56
